fix help page search box reset icon visibility
Affected page https://help.github.com/en/categories/github-pages-basics
search box reset icon becomes visible after you type something in.

note: text/icon color issues remain on that page unrelated to this.

--- a/github-dark.css
+++ b/github-dark.css
@@ -3982,6 +3982,9 @@
   .search-result-intro .ais-Highlight-highlighted {
     border-color: /*[[base-color]]*/ #4f8cc9 !important;
   }
+  .ais-SearchBox-resetIcon {
+    fill: #aaa !important
+  }
   /* https://github.com/musically-ut/lovely-forks */
   .lovely-forks-addon {
     color: #808080 !important;
